<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat"
        app:popupTheme="@style/ThemeOverlay.AppCompat" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="246dp"
        android:contentDescription="@string/bitmapImageContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/imageCompressButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/scale_text"
        app:layout_constraintBottom_toTopOf="@+id/removeColorButton"
        app:layout_constraintEnd_toStartOf="@+id/xScaleEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDataText" />

    <TextView
        android:id="@+id/imgDataText"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginBottom="12dp"
        android:text="@string/image_values"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageCompressButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/saveImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:text="@string/save_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/removeColorButton"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/photoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="75dp"
        android:contentDescription="@string/imageButtonContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xScaleEditText"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/xScaleEditText"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/xValTextHint"
        android:inputType="numberSigned"
        android:text="@string/standard_xvalue"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/saveImageButton"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/imageCompressButton"
        app:layout_constraintTop_toBottomOf="@+id/imgDataText"
        app:layout_constraintVertical_bias="0.545" />

    <EditText
        android:id="@+id/yScaleEditText"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/yValTextHint"
        android:inputType="numberSigned"
        android:text="@string/standard_yvalue"
        app:layout_constraintBottom_toTopOf="@+id/saveImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imgDataText"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="47dp"
        android:text="@string/x"
        app:layout_constraintBottom_toTopOf="@+id/saveImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDataText" />

    <Button
        android:id="@+id/removeColorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="76dp"
        android:text="@string/remove_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCompressButton" />

</android.support.constraint.ConstraintLayout>